--- a/www/css/index.css
+++ b/www/css/index.css
@@ -84,7 +84,7 @@ body.input{
     background-color: #a9dab0;
     border-radius: 2px;
     height: 45px;
-    font-size: 20px;
+    font: 20px "MuseoSansLight";
     border: 1px solid #a9dab0;
     outline: none;
 }
@@ -94,7 +94,7 @@ body.input{
     background-color: #a9dab0;
     border-radius: 2px;
     height: 145px;
-    font-size: 20px;
+    font: 20px "MuseoSansLight";
     border: 1px solid #a9dab0;
     outline: none;
 }
@@ -147,12 +147,21 @@ body.input{
 
 header {
     width: 100%;
-    padding: 10px 15px 34px 15px;
+    padding: 8px 15px 34px 15px;
     background-color:rgb(128, 92, 165);
     position: fixed;
     top: 0;
     height: 44px;
     z-index: 5000;
+}
+.headerIsIOS {
+    /*width: 100%;*/
+    padding: 20px 15px 34px 15px;
+    /*background-color:rgb(128, 92, 165);*/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*height: 44px;*/
+    /*z-index: 5000;*/
 }
 header a i{
     font-size: 30px!important;
@@ -174,7 +183,12 @@ header a i{
 }
 
 .logotype {
-    padding: 10px;
+    padding: 5px 10px 0 10px;
+    width: 100%;
+    margin: 44px 0 0 0;
+}
+.logotypeIsIOS {
+    padding: 13px 10px 0 10px;
     width: 100%;
     margin: 44px 0 0 0;
 }
@@ -693,13 +707,14 @@ nav a span{
     font-size: 20px;
 }
 .aboutUs h1{
-    font-size: 25px;
-    font-weight: 800;
-    padding: 0 0 10px 0;
+    font-size: 2em;
+    /*text-align: justify;*/
+    /* font-weight: 800; */
+    padding: 20px 0 10px 0;
 }
 .contactUs h1{
     font-size: 25px;
-    font-weight: 800;
+    padding: 10px;
 }
 .contactUs h2{
     padding: 20px 0 21px 0px;
@@ -844,14 +859,16 @@ nav a span{
 }
 .text{
     margin:0 0 10px 0;
+    font-size: 1.4em;
     padding:0;
-    text-align: justify;
+    line-height: 1.5em;
+    text-align: left;
 }
-.text> video{
+.text> video, .text>img{
+    width:100%;
     padding:10px 0 0 0 ;
 }
 #iframe {
-    text-align: center;
     background: white;
     width: 100%;
     height: calc(100% - 42px);
@@ -859,9 +876,23 @@ nav a span{
     left: 0;
     bottom:91px;
     position: fixed;
-    z-index: 1001;
-    overflow: hidden;
+    z-index: 3001;
+    -webkit-overflow-scrolling: touch;
+    overflow: scroll;
 }
 .grey{
     background: url('../img/_11.png')no-repeat center !important;
+}
+.prevision:after{
+    position: absolute;
+    display: block;
+    content: url("../img/play.png");
+    top: 50%;
+    /*top: calc(50% - 10px);*/
+    left: -webkit-calc(50% - 18px);
+    left: calc(50% - 18px);
+    z-index: 999999;
+}
+.prevision{
+    position: relative;
 }
