iphone scroll issue done

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -871,11 +871,11 @@ nav a span{
 #iframe {
     background: white;
     width: 100%;
-    height: calc(100% - 42px);
-    top: 42px;
+    height: 100%;
+    top: 44px;
     left: 0;
-    bottom:91px;
-    position: fixed;
+    /*bottom:91px;*/
+    position: absolute;
     z-index: 3001;
     -webkit-overflow-scrolling: touch;
     overflow: scroll;
