--- a/www/templates/topMenu.html
+++ b/www/templates/topMenu.html
@@ -4,6 +4,6 @@
         <li><a href="#/sections">{{isLogged?'Sections':''}}</a></li>
         <li><a href="#/about_us">About Us</a></li>
         <li><a href="#/contact">Contact</a></li>
-        <!--<li><a href="#/">Signup</a></li>-->
+        <li ng-if="!isLogged"><a href="#/signUp">Sign up</a></li>
         <li><a href="#/login"  >{{isLogged?'Logout':'Login'}}</a></li>
     </ul>
