--- a/www/css/index.css
+++ b/www/css/index.css
@@ -996,3 +996,8 @@ div .terms h5{
 .padid a{
     text-decoration: none;
 }
+a.disabled{
+    pointer-events: none; /* делаем ссылку некликабельной */
+    cursor: default;  /* устанавливаем курсор в виде стрелки */
+    color: #999; /* цвет текста для нективной ссылки */
+}
