--- a/www/css/index.css
+++ b/www/css/index.css
@@ -14,9 +14,13 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
+    outline: none;
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+}
+body, html{
+    background: #dbe7ea !important;
 }
 @font-face {
     font-family: "MuseoSansLight";
@@ -145,6 +149,7 @@ body.input{
     text-decoration: none;
     color: #fff;
     display: block;
+    outline:none;
 }
 
 .mobile-menu li {
@@ -163,15 +168,15 @@ header {
     height: 51px;
     z-index: 5000;
 }
-.headerIsIOS {
+/*.headerIsIOS {*/
     /*width: 100%;*/
-    padding: 20px 15px 34px 15px;
+    /*padding: 20px 15px 34px 15px;*/
     /*background-color:rgb(128, 92, 165);*/
     /*position: fixed;*/
     /*top: 0;*/
     /*height: 44px;*/
     /*z-index: 5000;*/
-}
+/*}*/
 header a i{
     font-size: 30px!important;
     color: #dbe7ea;
@@ -197,11 +202,11 @@ header a i{
     width: 100%;
     margin: 44px 0 0 0;
 }
-.logotypeIsIOS {
-    padding: 10px 10px 0 10px;
-    width: 100%;
-    margin: 44px 0 0 0;
-}
+/*.logotypeIsIOS {*/
+    /*padding: 10px 10px 0 10px;*/
+    /*width: 100%;*/
+    /*margin: 44px 0 0 0;*/
+/*}*/
 
 .menu-button {
     position: relative;
@@ -486,7 +491,7 @@ nav {
     display: block;
     font-size: 2.2em;
     color: #666;
-    padding-bottom: 20px;
+    /*padding-bottom: 20px;*/
 }
 .titleContainer{
     overflow: hidden;
@@ -898,11 +903,11 @@ nav a span{
 .text> video, .text>img{
     width:100%;
     padding:10px 0 0 0 ;
+    outline:none;
 }
 #iframe {
     background: white;
     width: 100%;
-    /*height: 125%;*/
     top: 44px;
     left: 0;
     position: absolute;
@@ -1003,4 +1008,22 @@ a.disabled{
     pointer-events: none; /* делаем ссылку некликабельной */
     cursor: default;  /* устанавливаем курсор в виде стрелки */
     color: #999; /* цвет текста для нективной ссылки */
+}
+.modal{
+    padding:10px;
+    border:none;
+    outline: none;
+}
+.modal img{
+    /*box-shadow: 6px 6px 20px 3px rgba(0,0,0,0.5);*/
+    width: 80%;
+    padding: 10px;
+    margin: 10px;
+}
+.md-dialog-container{
+    z-index: 5010 !important;
+}
+.little_text{
+    padding: 10px;
+    font-size: 20px;
 }
