work version purchase`s

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1080,6 +1080,7 @@ nav a span {
     padding: 34px 0 0 0px;
     position: relative;
     z-index: 5;
+    pointer-events: none;
 }
 
 .for_after {
